try4 fix instant padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,15 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 10px;
-  font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    font-size: 10px;
+    font-family: 'Roboto', sans-serif;
 }
 
 :root {
